[package]
name = "elintranet-doh-and-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "rustls-tls"] }
tiny_http = { version = "0.12.0", features = ["ssl-rustls"] }

